integrate site managment

--- a/monitor/templates/topbar.html
+++ b/monitor/templates/topbar.html
@@ -9,6 +9,7 @@
         <li class="menu-text"><span id="time"></span></li>  
       <li><a href="javascript:;"><i class="fa fa-cogs"></i></a>
         <ul class="menu vertical">
+          <li><a href="<%= app.router.buildUrl('sites') %>">Seiten</a></li>
           <li><a href="<%= app.router.buildUrl('user') %>">Mein Profil</a></li>
           <li><a href="<%= app.router.buildUrl('logout') %>">Logout</a></li>
         </ul>
