integrate site check

--- a/monitor/templates/topbar.html
+++ b/monitor/templates/topbar.html
@@ -7,7 +7,8 @@
   <div class="top-bar-right">
     <ul class="dropdown menu" data-dropdown-menu>
         <li class="menu-text"><span id="time"></span></li>  
-      <li><a href="javascript:;"><i class="fa fa-cogs"></i></a>
+        <li><a href="javascript:;" onclick="app.library.reload();"><i class="fa fa-refresh"></i></a>
+        <li><a href="javascript:;"><i class="fa fa-cogs"></i></a>
         <ul class="menu vertical">
           <li><a href="<%= app.router.buildUrl('sites') %>">Seiten</a></li>
           <li><a href="<%= app.router.buildUrl('user') %>">Mein Profil</a></li>
