--- a/monitor/css/app.css
+++ b/monitor/css/app.css
@@ -5,3 +5,38 @@
     top: 0; left: 0;
     background: #F7F7F7 url('../img/loader_big.gif') no-repeat center;
 }
+
+/*Page home ##################################################################*/
+.home_row {
+    color: #fff;
+    padding: 30px;
+    background-color: #3b1f2b;
+}
+
+.home_row .fa {
+    color: #fff;
+}
+
+.home_row .columns {
+    
+}
+
+.home_row_1 {
+    background-color: #383961;
+}
+
+.home_row_2 {
+    background-color: #dbdfac;
+}
+
+.home_row_3 {
+    background-color: #5f758e;
+}
+
+.home_row_4 {
+    background-color: #3b1f2b;
+}
+
+.home_row_error {
+    background-color: #db162f;
+}
