--- a/monitor/templates/site.html
+++ b/monitor/templates/site.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="large-12 columns">
-        <h1>Noch in Arbeit</h1>
-    </div> 
+<h1><%= site.name %></h1>
+<div>
+    <%=site.url%>
 </div>
+
